c/examples/writing-a-c-compiler-tests/tests/chapter_13/invalid_types/extra_credit/bitwise_xor.c
int main(void) {
    /* It's illegal to XOR doubles */
    return 1e10 ^ -1e10;
}